controllers have been separated in swagger, added response for shleters GET
