# backend/swagger-output.json
@@ -31,6 +31,9 @@
     },
     "/animals": {
       "get": {
+        "tags": [
+          "Animals"
+        ],
         "description": "",
         "parameters": [
           {
@@ -57,6 +60,9 @@
     },
     "/animalDataRegister/{animalId}": {
       "get": {
+        "tags": [
+          "Animals"
+        ],
         "description": "",
         "parameters": [
           {
@@ -89,6 +95,9 @@
     },
     "/animalDataAdoption/{animalId}": {
       "get": {
+        "tags": [
+          "Animals"
+        ],
         "description": "",
         "parameters": [
           {
@@ -121,6 +130,9 @@
     },
     "/animalRegistration/": {
       "post": {
+        "tags": [
+          "Animals"
+        ],
         "description": "",
         "parameters": [
           {
@@ -165,6 +177,9 @@
     },
     "/login": {
       "post": {
+        "tags": [
+          "Auth"
+        ],
         "description": "",
         "parameters": [
           {
@@ -195,6 +210,9 @@
     },
     "/settingsCity/{sheltersId}": {
       "get": {
+        "tags": [
+          "Dictonary"
+        ],
         "description": "",
         "parameters": [
           {
@@ -227,6 +245,9 @@
     },
     "/settingsCommune/{sheltersId}": {
       "get": {
+        "tags": [
+          "Dictonary"
+        ],
         "description": "",
         "parameters": [
           {
@@ -259,6 +280,9 @@
     },
     "/settingsSpecies/{sheltersId}": {
       "get": {
+        "tags": [
+          "Dictonary"
+        ],
         "description": "",
         "parameters": [
           {
@@ -291,6 +315,9 @@
     },
     "/settingsBreed/{sheltersId}": {
       "get": {
+        "tags": [
+          "Dictonary"
+        ],
         "description": "",
         "parameters": [
           {
@@ -323,6 +350,9 @@
     },
     "/settingsColor/{sheltersId}": {
       "get": {
+        "tags": [
+          "Dictonary"
+        ],
         "description": "",
         "parameters": [
           {
@@ -355,6 +385,9 @@
     },
     "/settingsArea/{sheltersId}": {
       "get": {
+        "tags": [
+          "Dictonary"
+        ],
         "description": "",
         "parameters": [
           {
@@ -387,6 +420,9 @@
     },
     "/settingsTypeAdoption/{sheltersId}": {
       "get": {
+        "tags": [
+          "Dictonary"
+        ],
         "description": "",
         "parameters": [
           {
@@ -419,6 +455,9 @@
     },
     "/settingsCity/{cityId}": {
       "delete": {
+        "tags": [
+          "Dictonary"
+        ],
         "description": "",
         "parameters": [
           {
@@ -448,6 +487,9 @@
     },
     "/settingsCommune/{communeId}": {
       "delete": {
+        "tags": [
+          "Dictonary"
+        ],
         "description": "",
         "parameters": [
           {
@@ -477,6 +519,9 @@
     },
     "/settingsSpecies/{speciesId}": {
       "delete": {
+        "tags": [
+          "Dictonary"
+        ],
         "description": "",
         "parameters": [
           {
@@ -506,6 +551,9 @@
     },
     "/settingsBreed/{breedId}": {
       "delete": {
+        "tags": [
+          "Dictonary"
+        ],
         "description": "",
         "parameters": [
           {
@@ -535,6 +583,9 @@
     },
     "/settingsColor/{colorId}": {
       "delete": {
+        "tags": [
+          "Dictonary"
+        ],
         "description": "",
         "parameters": [
           {
@@ -564,6 +615,9 @@
     },
     "/settingsArea/{areaId}": {
       "delete": {
+        "tags": [
+          "Dictonary"
+        ],
         "description": "",
         "parameters": [
           {
@@ -593,6 +647,9 @@
     },
     "/settingsTypeAdoption/{typeAdoptionId}": {
       "delete": {
+        "tags": [
+          "Dictonary"
+        ],
         "description": "",
         "parameters": [
           {
@@ -620,6 +677,9 @@
         }
       },
       "put": {
+        "tags": [
+          "Dictonary"
+        ],
         "description": "",
         "parameters": [
           {
@@ -664,6 +724,9 @@
     },
     "/settingsCityId/{cityId}": {
       "put": {
+        "tags": [
+          "Dictonary"
+        ],
         "description": "",
         "parameters": [
           {
@@ -711,6 +774,9 @@
     },
     "/settingsCommuneId/{communeId}": {
       "put": {
+        "tags": [
+          "Dictonary"
+        ],
         "description": "",
         "parameters": [
           {
@@ -755,6 +821,9 @@
     },
     "/settingsSpeciesId/{speciesId}": {
       "put": {
+        "tags": [
+          "Dictonary"
+        ],
         "description": "",
         "parameters": [
           {
@@ -799,6 +868,9 @@
     },
     "/settingsBreedId/{breedId}": {
       "put": {
+        "tags": [
+          "Dictonary"
+        ],
         "description": "",
         "parameters": [
           {
@@ -843,6 +915,9 @@
     },
     "/settingsColorId/{colorId}": {
       "put": {
+        "tags": [
+          "Dictonary"
+        ],
         "description": "",
         "parameters": [
           {
@@ -887,6 +962,9 @@
     },
     "/settingsAreaId/{areaId}": {
       "put": {
+        "tags": [
+          "Dictonary"
+        ],
         "description": "",
         "parameters": [
           {
@@ -931,6 +1009,9 @@
     },
     "/settingsAddCity/": {
       "post": {
+        "tags": [
+          "Dictonary"
+        ],
         "description": "",
         "parameters": [
           {
@@ -977,6 +1058,9 @@
     },
     "/settingsAddCommune/": {
       "post": {
+        "tags": [
+          "Dictonary"
+        ],
         "description": "",
         "parameters": [
           {
@@ -1020,6 +1104,9 @@
     },
     "/settingsAddSpecies/": {
       "post": {
+        "tags": [
+          "Dictonary"
+        ],
         "description": "",
         "parameters": [
           {
@@ -1063,6 +1150,9 @@
     },
     "/settingsAddColor/": {
       "post": {
+        "tags": [
+          "Dictonary"
+        ],
         "description": "",
         "parameters": [
           {
@@ -1106,6 +1196,9 @@
     },
     "/settingsAddArea/": {
       "post": {
+        "tags": [
+          "Dictonary"
+        ],
         "description": "",
         "parameters": [
           {
@@ -1149,6 +1242,9 @@
     },
     "/settingsTypeAdoption/": {
       "post": {
+        "tags": [
+          "Dictonary"
+        ],
         "description": "",
         "parameters": [
           {
@@ -1192,6 +1288,9 @@
     },
     "/people": {
       "get": {
+        "tags": [
+          "People"
+        ],
         "description": "",
         "parameters": [
           {
@@ -1218,6 +1317,9 @@
     },
     "/animalsOfPeopleGivingBack/{peopleId}": {
       "get": {
+        "tags": [
+          "People"
+        ],
         "description": "",
         "parameters": [
           {
@@ -1250,6 +1352,9 @@
     },
     "/peopleById/{peopleId}": {
       "get": {
+        "tags": [
+          "People"
+        ],
         "description": "",
         "parameters": [
           {
@@ -1282,6 +1387,9 @@
     },
     "/shelters": {
       "get": {
+        "tags": [
+          "Shelter"
+        ],
         "description": "",
         "parameters": [
           {
@@ -1292,7 +1400,10 @@
         ],
         "responses": {
           "200": {
-            "description": "OK"
+            "description": "User successfully obtained.",
+            "schema": {
+              "$ref": "#/definitions/SheltersResponse"
+            }
           },
           "401": {
             "description": "Unauthorized"
@@ -1302,6 +1413,54 @@
           },
           "500": {
             "description": "Internal Server Error"
+          }
+        }
+      }
+    }
+  },
+  "definitions": {
+    "BikeComponent": {
+      "type": "object",
+      "properties": {
+        "id": {
+          "type": "string",
+          "example": "string"
+        },
+        "name": {
+          "type": "string",
+          "example": "string"
+        },
+        "type": {
+          "type": "string",
+          "example": "number"
+        },
+        "user": {
+          "type": "object",
+          "properties": {
+            "id": {
+              "type": "string",
+              "example": "string"
+            }
+          }
+        }
+      }
+    },
+    "SheltersResponse": {
+      "type": "array",
+      "items": {
+        "type": "object",
+        "properties": {
+          "ID": {
+            "type": "string",
+            "example": "string"
+          },
+          "name": {
+            "type": "string",
+            "example": "string"
+          },
+          "img": {
+            "type": "string",
+            "example": "string"
           }
         }
       }
