# src/api/models.ts
@@ -1,0 +1,1 @@
+export { SheltersResponse } from './models/shelters-response';
