# src/app/views/app-view/services/shelter.service.ts
@@ -2,7 +2,8 @@ import { Injectable } from '@angular/core';
 import { MatDialog } from '@angular/material/dialog';
 import { filter, map, Observable } from 'rxjs';
 import { BehaviorSubject } from 'rxjs/internal/BehaviorSubject';
-import { ApiService } from 'src/api/services';
+import { SheltersResponse } from 'src/api/models';
+import { ShelterService as ShelterHttpService } from 'src/api/services';
 import { StorageService } from 'src/app/services/storage.service';
 import { Shelters } from '../components/choose-shelter-popup/choose-shelter-popup';
 import { ChooseShelterPopupComponenet } from '../components/choose-shelter-popup/choose-shelter-popup.componenet';
@@ -14,7 +15,7 @@ export class ShelterService {
   constructor(
     private readonly dialog: MatDialog,
     private readonly storage: StorageService,
-    private readonly api: ApiService
+    private readonly api: ShelterHttpService
   ) {
     const shelter: Shelters = this.storage.get('shelter') as Shelters;
     this.selectedShelter$.next(shelter ?? null);
@@ -38,8 +39,8 @@ export class ShelterService {
     });
   }
 
-  private getShelterList$(): Observable<Shelters[]> {
-    return this.api.getShelters() as unknown as Observable<Shelters[]>;
+  private getShelterList$(): Observable<SheltersResponse> {
+    return this.api.getShelters();
   }
 
   public get selectedShelterChangeDetector$(): Observable<Shelters> {
